# optoma-web-api

./: .gitignore  LICENSE  README.md  activate  autogen.sh  fmt  pyproject.toml
.autogen.d/: 01virtualenv.sh
optoma_web_api/: __init__.py
optoma_web_api/cli/: cli.py  clitypes.py
tests/test_optoma_web_api/: test.py
